--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -10,27 +11,34 @@
     <link rel="stylesheet" href="css/Responsive-Top-Navigation.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/parallax.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
+    <!--Header-->
+    <header>
+      <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </header>
 
-    <div style="padding-left: 16px;">
-      <h2>Responsive Topnav Example</h2>
-      <p>Resize the browser window to see how it works.</p>
-    </div>
     <script src="menu.js"></script>
 
     <header class="parallax-completo">
       <div class="texto-hero">
-        <h2>Desplaza hacía abajo</h2>
+        <h2>Marcos Fraga Técnico en Refrigeración Familiar y Comercial</h2>
       </div>
     </header>
     <section class="center espacio">
