--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       </p>
     </section>
     <section class="parallax-chico">
-      <h2>Menos altura</h2>
+      <h2>trabajos</h2>
+      <img class="refri" src="img/refrigerador.svg" alt="" />
+      <img class="refri" src="img/refrigerador.svg" alt="" />
     </section>
     <section class="texto">
       <h2>Disfruta del elemento Parallax</h2>
