--- a/index.html
+++ b/index.html
@@ -73,25 +73,7 @@
     </section>
     <section class="center espacio">
       <h2>Parallax Demo</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-        natus quisquam aperiam adipisci laudantium accusantium similique sint
-        earum, iusto itaque quasi ad assumenda deleniti ratione vitae aliquid
-        hic repellendus impedit obcaecati laborum quis tempore nesciunt
-        aspernatur fugit! Magnam eos debitis ab similique atque obcaecati
-        voluptas porro officiis cumque odio officia aperiam quibusdam sed, quas
-        vero earum? Esse placeat soluta explicabo consequuntur illo recusandae
-        amet voluptatibus pariatur exercitationem et velit voluptates qui,
-        maiores corporis natus ipsam porro accusantium, delectus sapiente cumque
-        aperiam nesciunt deserunt sunt! Soluta vel voluptates et reprehenderit
-        voluptate! Nihil earum placeat libero, non illo laudantium enim cum
-        amet. Itaque, est. Sequi temporibus atque odit perspiciatis numquam, a
-        distinctio architecto, consequatur neque, quae dolor rerum. Magni, quam.
-        Soluta rem ex aspernatur eveniet, voluptates possimus perferendis ad
-        inventore rerum mollitia praesentium quod nostrum similique ullam beatae
-        eos sunt nesciunt ab, accusamus a explicabo corporis iure quae? In
-        quibusdam commodi temporibus.
-      </p>
+      <img src="img/WhatsApp Image 2021-07-27 at 15.14.04.jpeg" alt="" />
     </section>
     <section class="parallax-chico">
       <h2>Menos altura</h2>
