--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="textos-header">
         <h1 class="display-5">Marcos Fraga</h1>
         <h2 class="display-4">
-          Tecnico <br />
+          Tecnico en <br />
           Aire Acondicionado y Refrigeración
         </h2>
 
@@ -78,8 +78,68 @@
       <h2>Disfruta del elemento Parallax</h2>
     </section>
     <section class="parallax-completo">
-      <div class="texto-hero">
-        <h2>Desplaza hacía abajo</h2>
+      <div id="Trabajos" class="galeria">
+        <h2>Galeria de Trabajos</h2>
+        <div class="linea"></div>
+        <div class="contenedor-imagenes">
+          <div class="imagen">
+            <img src="img/trabajos/estufa.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Estufas</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img
+              src="img/trabajos/porton-basculante.jpg"
+              alt="trabajos-galeria"
+            />
+            <div class="overlay">
+              <h2>Portones basculantes</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/quemador.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Quemandores</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/reja.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Rejas</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/escalera.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Escaleras</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/candelabros.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Candelabros</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/mantenimiento.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Mantenimiento y Reparaciones</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/estructura.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Estructuras</h2>
+            </div>
+          </div>
+          <div class="imagen">
+            <img src="img/trabajos/artesania.jpg" alt="trabajos-galeria" />
+            <div class="overlay">
+              <h2>Artesanias</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <footer id="contacto">
