--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/parallax.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/galery.css" />
 
     <!--BOOSTRAP CSS-->
     <link
@@ -67,17 +68,8 @@
     <section class="texto">
       <h2>Disfruta del elemento Parallax</h2>
     </section>
+    <!--
     <section class="center espacio">
-      <h2>Parallax Demo</h2>
-      <img src="img/WhatsApp Image 2021-07-27 at 15.14.04.jpeg" alt="" />
-    </section>
-    <section class="parallax-chico">
-      <h2>Menos altura</h2>
-    </section>
-    <section class="texto">
-      <h2>Disfruta del elemento Parallax</h2>
-    </section>
-    <section class="parallax-completo">
       <div id="Trabajos" class="galeria">
         <h2>Galeria de Trabajos</h2>
         <div class="linea"></div>
@@ -142,6 +134,14 @@
         </div>
       </div>
     </section>
+  -->
+    <section class="parallax-chico">
+      <h2>Menos altura</h2>
+    </section>
+    <section class="texto">
+      <h2>Disfruta del elemento Parallax</h2>
+    </section>
+    <section class="parallax-completo"></section>
     <footer id="contacto">
       <div class="container-body">
         <div class="colum1">
