--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- Icon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Refrigeracion MC | Landing Page</title>
+  <title>Zero Refrigeracion</title>
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +18,8 @@
     rel="stylesheet">
 
   <!-- CSS 👍-->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/menu.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet  -->
 </head>
@@ -31,35 +32,29 @@
     <nav class="nav ">
       <div class="nav__container container">
         <figure class="nav__figure">
-          <img src="Sport.png" alt="" class="nav__img">
+          <img src="assets/images/Icon-logo.png" alt="" class="nav__img">
         </figure>
-        <!--
-        <figure for="nav__hamburguer" class="nav__hamburguer">
-          <img src="./images/icon-hamburger.svg" class="nav__icon" alt="">
-        </figure>
--->
 
-        <img src="Hamburguesa.svg" alt="" class="hamburguer nav__hamburguer">
+        <img src="./assets/images/Hamburguesa.svg" alt="" class="hamburguer nav__hamburguer">
 
         <div class="nav__links">
           <a href="#Inicio" class="nav__link"> Inicio</a>
-          <a href="#Servicio" class="nav__link">Servicios</a>
           <a href="#Contact" class="nav__link">Contacto</a>
-          <a href="#" class="nav__link nav__link--cta"> View plans</a>
-
+          <a href="#Servicio" class="nav__link nav__link--cta"> Servicios</a>
         </div>
 
         <!--Menu Despegable lateral-->
+
         <nav class="menu-navegacion">
           <a href="#Inicio">Inicio</a>
           <a href="#Servicio">Servicios</a>
           <!--<a href="#portafolio">Portafolio</a>-->
           <!--<a href="#expertos">Expertos</a>-->
           <a href="#Contact">Contacto</a>
+
         </nav>
       </div>
     </nav>
-
 
     <section class="hero__main container">
       <div class="hero__text">
@@ -75,9 +70,6 @@
     </section>
   </header>
 
-
-
-
   <main class="main">
 
     <section id="Servicio" class="different container">
@@ -87,31 +79,32 @@
       <div class="different__items">
 
         <article class="different__item">
-          <img src="./images/icon-snappy-process.svg" class="different__icon" alt="">
+          <img src="./assets/images/icon-snappy-process.svg" class="different__icon" alt="">
           <h3 class="different__title">
             Heladeras Familiares</h3>
 
-          <p class="different__paragraph"> Our application process can be completed in minutes, not hours. Don’t get
+          <p class="different__paragraph"> - Our application process can be completed in minutes. <br>
+            - Don’t get
             stuck filling in tedious forms.</p>
 
         </article>
 
         <article class="different__item">
-          <img src="./images/icon-affordable-prices.svg" class="different__icon" alt="">
+          <img src="./assets/images/icon-affordable-prices.svg" class="different__icon" alt="">
           <h3 class="different__title">
             Aire Acondicionado</h3>
           <p class="different__paragraph">
-            We don’t want you worrying about high monthly costs. Our prices may be low,
+            - We don’t want you worrying about high monthly costs. <br>
+            - Our prices may be low,
             but we still offer the best coverage possible.</p>
         </article>
 
         <article class="different__item">
-          <img src="./images/icon-people-first.svg" class="different__icon" alt="">
+          <img src="./assets/images/icon-people-first.svg" class="different__icon" alt="">
           <h3 class="different__title">Refrigeración Comercial</h3>
           <p class="different__paragraph">
-
-            Our plans aren’t full of conditions and clauses to prevent payouts. We make
-            sure you’re covered when you need it.</p>
+            - Our plans aren’t full of conditions and clauses to prevent payouts. <br>
+            - We make sure you’re covered when you need it.</p>
         </article>
       </div>
     </section>
@@ -129,26 +122,16 @@
     <section class="footer__container container">
       <div class="footer__brand">
         <figure class="footer__figure">
-          <img src="./images/logo.svg" alt="" class="footer__img">
+          <img src="./assets/images/Icon-logo.png" alt=""  class="nav__img footer__img">
 
         </figure>
         <div class="footer__contact">
           <a href="#" class="footer__media">
-            <img src="./images/icon-facebook.svg" alt="">
-          </a>
-
-
-          <a href="#" class="footer__media">
-            <img src="./images/icon-twitter.svg" alt="">
-          </a>
-
-
-          <a href="#" class="footer__media">
-            <img src="./images/icon-pinterest.svg" alt="">
+            <img src="./assets/images/icon-facebook.svg" alt="">
           </a>
 
           <a href="#" class="footer__media">
-            <img src="./images/icon-instagram.svg" alt="">
+            <img src="./assets/images/icon-instagram.svg" alt="">
           </a>
 
 
@@ -158,10 +141,10 @@
       <div class="footer__navigation">
 
         <nav class="footer__nav">
-          <a href="#" class="footer__link footer__link--first">Menu</a>
+          <h3 href="#" class="footer__link footer__link--first">Menu</h3>
           <a href="#Inicio" class="footer__link">Inicio</a>
           <a href="#Servicio" class="footer__link">Servicios</a>
-          <a href="#" class="footer__link">View plans</a>
+          <a href="#" class="footer__link wpp">WhatsApp</a>
           <a href="#" class="footer__link">Reviews</a>
         </nav>
         <!--
@@ -196,6 +179,6 @@
   </footer>
 
 </body>
-<script src="js/menu.js"></script>
+<script src="assets/js/menu.js"></script>
 
 </html>
