--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <!-- Icon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icon.png">
 
   <title>Zero Refrigeracion</title>
 
@@ -122,7 +122,7 @@
     <section class="footer__container container">
       <div class="footer__brand">
         <figure class="footer__figure">
-          <img src="./assets/images/Icon-logo.png" alt=""  class="nav__img footer__img">
+          <img src="./assets/images/Icon-logo-vs-blanco.png" alt=""  class="nav__img footer__img">
 
         </figure>
         <div class="footer__contact">
