--- a/index.html
+++ b/index.html
@@ -1,216 +1,188 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JP Instalaciones</title>
 
-    <!-- Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,300;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <!-- CSS-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
-    <!-- icono -->
-    <link
-      rel="shortcut icon"
-      href="assets/img/webcam-solid-24.png"
-      type="image/x-icon"
-    />
+  <!-- Icon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icon.png">
 
-    <!-- Boxicons CSS -->
-    <link
-      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-  </head>
+  <title>Zero Refrigeracion</title>
 
-  <body>
-    <header class="hero">
-      <div class="textos-hero">
-        <h1>JP Instalaciones</h1>
-        <p>Cámaras de vigilancia</p>
-        <a
-          href="https://api.whatsapp.com/send?phone=+59896400547&text=Hola%20Buenas!."
-          >Contactanos</a
-        >
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Karla:wght@400;700&display=swap"
+    rel="stylesheet">
+
+  <!-- CSS 👍-->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/menu.css">
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet  -->
+</head>
+
+
+
+<body>
+  <header id="Inicio" class="hero">
+
+    <nav class="nav ">
+      <div class="nav__container container">
+        <figure class="nav__figure">
+          <img src="assets/images/Icon-logo.png" alt="" class="nav__img">
+        </figure>
+
+        <img src="./assets/images/Hamburguesa.svg" alt="" class="hamburguer nav__hamburguer">
+
+        <div class="nav__links">
+          <a href="#Inicio" class="nav__link"> Inicio</a>
+          <a href="#Contact" class="nav__link">Contacto</a>
+          <a href="#Servicio" class="nav__link nav__link--cta"> Servicios</a>
+        </div>
+
+        <!--Menu Despegable lateral-->
+
+        <nav class="menu-navegacion">
+          <a href="#Inicio">Inicio</a>
+          <a href="#Servicio">Servicios</a>
+          <!--<a href="#portafolio">Portafolio</a>-->
+          <!--<a href="#expertos">Expertos</a>-->
+          <a href="#Contact">Contacto</a>
+
+        </nav>
       </div>
-      <div class="svg-hero" style="height: 150px; overflow: hidden">
-        <svg
-          viewBox="0 0 500 150"
-          preserveAspectRatio="none"
-          style="height: 100%; width: 100%"
-        >
-          <path
-            d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-            style="stroke: none; fill: #fff"
-          ></path>
-        </svg>
-      </div>
-    </header>
+    </nav>
 
-    <section class="wave-contenedor website">
-      <img class="img-website" src="assets/img/img-1.jpg" alt="" />
-      <div class="contenedor-textos-main">
-        <h2 class="titulo left">JP Instalaciones</h2>
-        <p class="parrafo">
-          Técnicos en cámaras de seguridad y alarmas. Venta, Instalación,
-          Mantenimiento y Programación. Instalamos los mejores sistemas para
-          darte acceso inmediato al video en vivo de los sitios que quieres
-          vigilar, directamente desde tu móvil. Podrás también grabar y ver a
-          demanda.
-        </p>
-        <a href="#galeria" class="cta">Ver Trabajos</a>
+    <section class="hero__main container">
+      <div class="hero__text">
+        <h1 class="title"> Necesitasa un Técnico
+          <br>
+          Somos expertos en Refrigeración
+        </h1>
+        <p class="hero__paragraph">Desde hace mas de 3 generaciones brindando Servicios de alta calidad al sector
+          familiar y empresarial.</p>
+        <a href="https://api.whatsapp.com/send?phone=+59891907637" class="cta"> Contactar</a>
       </div>
+
     </section>
-    <section class="info">
-      <div class="contenedor">
-        <h2 class="titulo left">
-          Somos expertos en Cámaras de Seguridad y Alarmas
-        </h2>
-        <p>
-          Las cámaras permiten monitorizar en cualquier momento lo que está
-          ocurriendo en tu hogar o tu negocio brindándote seguridad.
-        </p>
-      </div>
-    </section>
+  </header>
 
-    <section class="cards contenedor">
-      <h2 class="titulo">Nuestro Servicio</h2>
-      <div class="content-cards">
-        <article class="card">
-          <i class="bx bxs-send"></i>
-          <h3>Instalación personalizada</h3>
-          <br />
-          <p>
-            Colocación del sistema de videovigilancia basándose en la
-            observación y el estudio de las zonas de riesgo de tu propiedad y
-            tus necesidades.
+  <main class="main">
+
+    <section id="Servicio" class="different container">
+
+      <h2 class="title title--different">Servicios</h2>
+
+      <div class="different__items">
+
+        <article class="different__item">
+          <img src="./assets/images/icons8-refrigerador-100.png" class="different__icon" alt="">
+          <h3 class="different__title">
+            Heladeras Familiares</h3>
+
+          <p class="different__paragraph">
+            - Cambio de compresor. <br>
+            - Carga de gas. <br>
+            - Cambio de componentes electrónicos.
           </p>
-          <!--<a href="" class="cta">Learn more</a>-->
+
         </article>
-        <article class="card">
-          <i class="bx bxs-send"></i>
-          <h3>Visualización a distancia</h3>
-          <br />
-          <p>
-            El sistema de videovigilancia permite controlar a distancia todo lo
-            que ocurre en tu hogar o negocio desde distintos dispositivos.
+
+        <article class="different__item">
+          <img src="./assets/images/icons8-aire-acondicionado-100.png" class="different__icon" alt="">
+          <h3 class="different__title">
+            Aire Acondicionado</h3>
+          <p class="different__paragraph">
+            - Instalacion (nuevo o usado). <br>
+            - Mantenimiento Preventivo.
           </p>
-          <!--<a href="" class="cta">Learn more</a>-->
         </article>
-        <article class="card">
-          <i class="bx bxs-send"></i>
-          <h3>Mantenimiento preventivo</h3>
-          <br />
-          <p>
-            Realizamos un monitoreo técnico preventivo de manera permanente que
-            garantiza el correcto funcionamiento de los equipos.
+
+        <article class="different__item">
+          <img src="./assets/images/icons8-cooling-100.png" class="different__icon" alt="">
+          <h3 class="different__title">Refrigeración Comercial</h3>
+          <p class="different__paragraph">
+            - Mantenimientos. <br>
+            - Vitrinas. <br>
+            - Cámaras de frío.
           </p>
-          <!--<a href="" class="cta">Learn more</a>-->
         </article>
       </div>
     </section>
 
-    <!--Galeria con efecto JS Lightbox-->
-    <section class="gallery" id="galeria">
-      <div class="contenedor">
-        <h2 class="titulo">Galeria</h2>
-        <div class="linea"></div>
-        <div class="contenedor-galeria">
-          <img src="assets/img/works/1.jpg" class="img-galeria" alt="Hola" />
-          <img src="assets/img/works/2.jpg" class="img-galeria" alt="" />
-          <img src="assets/img/works/3.jpg" class="img-galeria" alt="" />
-          <img src="assets/img/works/4.jpg" class="img-galeria" alt="" />
-          <img src="assets/img/works/5.jpg" class="img-galeria" alt="" />
-          <img src="assets/img/works/6.jpg" class="img-galeria" alt="" />
+    <section class="find">
+      <div class="find__container container">
+        <h2 class="title title--find"> Find out more about how we work</h2>
+        <a href="#" class="cta cta--find"> How we work</a>
+      </div>
+    </section>
+  </main>
+
+  <footer id="Contact" class="footer">
+
+    <section class="footer__container container">
+      <div class="footer__brand">
+        <figure class="footer__figure">
+          <img src="./assets/images/Icon-logo-vs-blanco.png" alt="" class="nav__img footer__img">
+
+        </figure>
+        <div class="footer__contact">
+          <a href="#" class="footer__media">
+            <img src="./assets/images/icon-facebook.svg" alt="">
+          </a>
+
+          <a href="https://instagram.com/_zero_refrigeracion?igshid=YmMyMTA2M2Y=" class="footer__media">
+            <img src="./assets/images/icon-instagram.svg" alt="">
+          </a>
+
+
         </div>
+      </div>
+
+      <div class="footer__navigation">
+
+        <nav class="footer__nav">
+          <h3 href="#" class="footer__link footer__link--first">Menu</h3>
+          <a href="#Inicio" class="footer__link">Inicio</a>
+          <a href="#Servicio" class="footer__link">Servicios</a>
+          <a href="https://api.whatsapp.com/send?phone=+59891907637" class="footer__link wpp">WhatsApp</a>
+          <!--    <a href="#" class="footer__link">Reviews</a> -->
+        </nav>
+        <!--
+        <nav class="footer__nav">
+          <a href="#" class="footer__link footer__link--first">Help me</a>
+          <a href="#" class="footer__link">FAQ</a>
+          <a href="#" class="footer__link">Terms of use</a>
+          <a href="#" class="footer__link">Privacy policy</a>
+          <a href="#" class="footer__link">Cookies</a>
+        </nav>
+
+        <nav class="footer__nav">
+          <a href="#" class="footer__link footer__link--first">Contact</a>
+          <a href="#" class="footer__link">Sales</a>
+          <a href="#" class="footer__link">Support</a>
+          <a href="#" class="footer__link">Live chat</a>
+          <a href="#" class="footer__link">Others</a>
+        </nav>
+
+        <nav class="footer__nav">
+          <a href="#" class="footer__link footer__link--first">Careers</a>
+          <a href="#" class="footer__link">Press</a>
+          <a href="#" class="footer__link">Licenses</a>
+          <a href="#" class="footer__link"></a>
+          <a href="#" class="footer__link"></a>
+        </nav>
+        -->
+
       </div>
     </section>
 
-    <div class="imagen-light">
-      <img src="assets/img/close.svg" alt="" class="close" />
-      <img src="" alt="" class="agregar-imagen" />
-    </div>
+  </footer>
 
-    <script src="assets/js/lightbox.js"></script>
+</body>
+<script src="assets/js/menu.js"></script>
 
-    <section id="kit" class="info-last">
-      <div class="contenedor last-section">
-        <div class="contenedor-textos-main">
-          <h2 class="titulo left">Proyectos Personalizados</h2>
-          <p class="parrafo">
-            Porque cada uno de los proyectos requieren de una solución distinta
-            entre sí. Nuestro equipo técnico realizará un exhaustivo estudio de
-            su casa, comercio o industria para crear un proyecto personalizado
-            que mejor se adapte a sus necesidades. Además, nuestros
-            especialistas, le asesorarán y le informarán en todo momento de todo
-            lo que necesita saber cómo solo un verdadero especialista puede
-            hacerlo.
-          </p>
-          <!--<a href="" class="cta">Learn more</a> -->
-        </div>
-        <img
-          src="assets/img/243716782_2673121342993023_5517142747391150130_n.jpg"
-          class="img-website"
-          alt=""
-        />
-      </div>
-
-      <div class="svg-wave" style="height: 150px; overflow: hidden">
-        <svg
-          viewBox="0 0 500 150"
-          preserveAspectRatio="none"
-          style="height: 100%; width: 100%"
-        >
-          <path
-            d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-            style="stroke: none; fill: #909497"
-          ></path>
-        </svg>
-      </div>
-    </section>
-
-    <footer id="footer">
-      <div class="contenedor footer-content">
-        <div class="contact-us">
-          <h2 class="brand">JP Instalaciones</h2>
-          <p>Somos expertos en Cámaras de Seguridad y Alarmas</p>
-        </div>
-        <div class="social-media">
-          <a
-            href="https://api.whatsapp.com/send?phone=+59896400547&text=Hola%20Buenas!."
-            class="social-media-icon"
-          >
-            <i class="bx bxl-whatsapp"></i>
-          </a>
-
-          <a
-            href="https://www.instagram.com/jpinstalacioness/"
-            class="social-media-icon"
-          >
-            <i class="bx bxl-instagram"></i>
-          </a>
-
-          <a
-            href="https://www.facebook.com/federicoinstalaciones/?ref=page_internal"
-            class="social-media-icon"
-          >
-            <i class="bx bxl-facebook"></i>
-          </a>
-        </div>
-      </div>
-      <div class="line"></div>
-    </footer>
-
-    <script
-      src="https://kit.fontawesome.com/c15b744a04.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
